--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,21 @@
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-family: Verdana;
+  background-color: black;
+  text-align: center;
 }
 
-header {
+h1 {
   font-size: 50px;
   color: white;
-  text-align: center;
+}
+
+a {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+h2 {
+  color: white;
+  font-size: 42px;
+  font-weight: 300;
 }
